[local-app] auto-establish SSH connection

--- a/components/local-app/BUILD.yaml
+++ b/components/local-app/BUILD.yaml
@@ -6,6 +6,7 @@ packages:
         - go.sum
         - "**/*.go"
       deps:
+        - components/supervisor-api/go:lib
         - components/gitpod-protocol/go:lib
       config:
         packaging: app
