--- a/chart/templates/ws-proxy-configmap.yaml
+++ b/chart/templates/ws-proxy-configmap.yaml
@@ -19,8 +19,8 @@ data:
     {
         "ingress": {
             "address": ":{{- $comp.ports.httpProxy.containerPort -}}",
-            "https": {{ $comp.useHTTPS -}},
-            "header": "{{- $comp.hostHeader -}}"
+            "https": false,
+            "header": {{- $comp.hostHeader | default "x-wsproxy-host" | quote }}
         },
         "workspaceInfoProviderConfig": {
             "wsManagerAddr": "ws-manager:8080",
@@ -50,7 +50,7 @@ data:
                 "host": "blobserve.{{- .Release.Namespace -}}.svc.cluster.local:{{ .Values.components.blobserve.ports.service.servicePort }}"
             },
             "gitpodInstallation": {
-                "scheme": "{{- template "gitpod.scheme" $this -}}",
+                "scheme": "https",
                 "hostName": "{{- $gp.hostname -}}",
                 "workspaceHostSuffix": ".ws{{- if $gp.installation.shortname -}}-{{ $.Values.installation.shortname }}{{- end -}}.{{ $.Values.hostname }}"
             },
