--- a/components/proxy/conf/Caddyfile
+++ b/components/proxy/conf/Caddyfile
@@ -156,6 +156,7 @@ https://{$GITPOD_DOMAIN} {
 		import cors_preflight
 	}
 
+	@cors_origin header_regexp referer Referer ^https://(?P<sdprefix>.*).ws(?P<location>-[a-z0-9]+)?.{$GITPOD_DOMAIN}
 	@codesync path /code-sync /code-sync/*
 	handle @codesync {
 		import security_headers
@@ -167,7 +168,7 @@ https://{$GITPOD_DOMAIN} {
 
 			header_down Access-Control-Allow-Credentials	"true"
 			header_down Access-Control-Expose-Headers		"Authorization,etag,x-operation-id,retry-after"
-			header_down	Access-Control-Allow-Origin			"*.${GITPOD_DOMAIN}" # TODO: fix.
+			header_down	Access-Control-Allow-Origin			"{re.referer.sdprefix}.${GITPOD_DOMAIN}"
 			header_down Access-Control-Allow-Methods 		"POST,GET,OPTIONS,DELETE"
 			header_down Access-Control-Allow-Headers		"Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With,X-Account-Type,X-Client-Commit,X-Client-Name,X-Client-Version,X-Execution-Id,X-Machine-Id,X-Machine-Session-Id,X-User-Session-Id,If-Match,If-None-Match"
 
@@ -222,9 +223,7 @@ https://*.*.{$GITPOD_DOMAIN} {
 	import ssl_configuration
 	import compression
 
-	@workspace 	header_regexp host Host ^(webview-|browser-|extensions-)?(?P<workspaceID>[a-z0-9][0-9a-z\-]+).ws(?P<location>-[a-z0-9]+)?.{$GITPOD_DOMAIN}
 	@workspace_port header_regexp host Host ^(webview-|browser-|extensions-)?(?P<workspacePort>[0-9]{2,5})-(?P<workspaceID>[a-z0-9][0-9a-z\-]+).ws(?P<location>-[a-z0-9]+)?.{$GITPOD_DOMAIN}
-
 	handle @workspace_port {
 		reverse_proxy ws-{re.host.workspaceID}-ports.{$KUBE_NAMESPACE}.{$KUBE_DOMAIN}:{re.host.workspacePort} {
 			import upstream_headers
@@ -235,6 +234,8 @@ https://*.*.{$GITPOD_DOMAIN} {
 		}
 	}
 
+	@cors_origin header_regexp referer Referer ^https://(?P<sdprefix>.*).ws(?P<location>-[a-z0-9]+)?.{$GITPOD_DOMAIN}
+	@workspace 	header_regexp host Host ^(webview-|browser-|extensions-)?(?P<workspaceID>[a-z0-9][0-9a-z\-]+).ws(?P<location>-[a-z0-9]+)?.{$GITPOD_DOMAIN}
 	handle @workspace {
 		reverse_proxy ws-proxy.{$KUBE_NAMESPACE}.{$KUBE_DOMAIN}:8080 {
 			import upstream_headers
@@ -245,7 +246,7 @@ https://*.*.{$GITPOD_DOMAIN} {
 
 			header_down Access-Control-Allow-Credentials	"true"
 			header_down Access-Control-Expose-Headers		"Authorization,etag,x-operation-id,retry-after"
-			header_down	Access-Control-Allow-Origin			"*.{$GITPOD_DOMAIN}" # TODO: fix.
+			header_down	Access-Control-Allow-Origin			"{re.referer.sdprefix}.${GITPOD_DOMAIN}"
 			header_down Access-Control-Allow-Methods 		"POST,GET,DELETE"
 			header_down Access-Control-Allow-Headers		"Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With,X-Account-Type,X-Client-Commit,X-Client-Name,X-Client-Version,X-Execution-Id,X-Machine-Id,X-Machine-Session-Id,X-User-Session-Id,If-Match,If-None-Match"
 		}
